# pomtick

./: .releaserc  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  README.md  cliff.toml  commitlint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/: CHANGELOG.md  CONTRIBUTING.md  RELEASENOTE.md  RELEASE_NOTES.md
.github/workflows/: main.yml  tauri-publish.yml
app/: globals.css  layout.tsx  page.tsx
apps/native/: .releaserc.json  index.html  package.json  release.config.cjs  tailwind.config.js
apps/native/lib/: types.d.ts
apps/native/src/: App.tsx  index.css  style.css
apps/native/src-tauri/: Cargo.toml  tauri.conf.json
apps/native/src-tauri/src/: main.rs
apps/native/src/components/: Background.tsx
apps/web/: package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: Background.tsx
apps/web/components/navbar/: ConfigMenu.tsx  ThemeSwitch.tsx  index.tsx
apps/web/components/state-indicator/: StatusProgress.tsx  index.tsx
apps/web/components/timer/: CircularProgress.tsx  PomodoroControls.tsx  (+3 more)
apps/web/lib/: defaults.ts  types.d.ts
components/: Background.tsx  Footer.tsx  StateIndicator.tsx  TimerLayer.tsx
components/atoms/: Select.tsx  Switch.tsx
components/navbar/: ConfigMenu.tsx  ThemeSwitch.tsx  index.tsx
components/state-indicator/: StatusProgress.tsx  index.tsx
components/timer/: CircularProgress.tsx  PomodoroControls.tsx  Secondhands.tsx  TimerDisplay.tsx  index.tsx
lib/: defaults.ts  fonts.ts  types.d.ts
lib/utils/: fns.ts  stringFns.ts
(+16 files in other folders)
